--- a/css/styles-new.css
+++ b/css/styles-new.css
@@ -289,6 +289,9 @@ button{
     position: absolute;
     top: -270px;
 }
+.what-is .translucent-logo{
+    top: -248px;
+}
 .what-is .banner-abs-pos{
     height: 100vh;
     position: absolute;
@@ -488,7 +491,7 @@ header{
     float: right;
 }
 .what-is .text-div .intro-p{
-    margin-bottom: 92px;
+    margin-bottom: 85px;
 }
 .text-div{
     height: 100vh;
@@ -543,6 +546,9 @@ header{
     margin-top: 200px;
     position: relative;
 }
+.what-is h1{
+    margin-top: 173px;
+}
 /*placeholder style*/
 .about .text-div h2, .experience .text-div h2, .what-is h1 {
     font-family: 'Oswald';
@@ -595,6 +601,7 @@ header{
     .text-div ul{
         display: inline-block;
         max-width: 772px;
+        margin-bottom: 20px;
     }
     .text-div ul li {
         padding: 0px 56px 50px;
@@ -607,6 +614,7 @@ header{
     .text-div ul{
         display: inherit;
         max-width: none;
+        margin-bottom: 120px;
     }
     .text-div ul li {
         padding: 0px 50px 0px;
@@ -1210,6 +1218,7 @@ footer .container{
     position: relative;
     background-color: #001b27;
     z-index: 2;
+    height: auto;
 }
 /*.experience{
     opacity: 0;
